--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-394.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-472.7KB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-177.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-208.2KB/s(Youtube:不良林), server: 217.30.10.67, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇨🇳 中国-291.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-2.08MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-245.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇦 加拿大-544.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 波兰-627.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇨🇳 台湾-3.63MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇺🇸 美国-159.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
@@ -73,12 +73,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
@@ -88,12 +88,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
@@ -104,12 +104,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
@@ -129,12 +129,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 波兰-208.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
+      - 波兰-627.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
