--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-291.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-2.08MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-245.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇦 加拿大-544.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-627.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇨🇳 台湾-3.63MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-159.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-600.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-2.01MB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-546.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-177.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-325.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-212.9KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
   - {name: 🇺🇸 美国-694.4KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-291.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-544.8KB/s(Youtube:不良林)
-      - 波兰-627.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
