--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-256.1KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇨🇳 中国-1021.8KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-183.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-163.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-212.9KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
-  - {name: 🇺🇸 美国-694.4KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.00MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-480.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-358.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-315.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-282.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-223.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-423.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-328.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-286.2KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1021.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-183.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-286.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
